--- a/usa_canada.html
+++ b/usa_canada.html
@@ -76,7 +76,7 @@
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
     </script>
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBuvhRJBeiPExtx68FXa6ll1Bu4y9M_Fl4&callback=initMap">
     </script>
   </body>
 </html>
