--- a/usa_canada.html
+++ b/usa_canada.html
@@ -1,51 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset=utf-8 />
-<title>Styled markers from CSV data</title>
-<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-<script src='https://api.mapbox.com/mapbox.js/v3.0.1/mapbox.js'></script>
-<link href='https://api.mapbox.com/mapbox.js/v3.0.1/mapbox.css' rel='stylesheet' />
-<style>
-  body { margin:0; padding:0; }
-  #map { position:absolute; top:0; bottom:0; width:100%; }
-</style>
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
+   integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+   crossorigin=""/>
+  
+ <!-- Make sure you put this AFTER Leaflet's CSS -->
+ <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
+   integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
+   crossorigin=""></script>
+  
 </head>
 <body>
-
-
-<script src='https://api.mapbox.com/mapbox.js/plugins/leaflet-omnivore/v0.2.0/leaflet-omnivore.min.js'></script>
-
-<div id='map'></div>
-
-<script>
-L.mapbox.accessToken = '<your access token here>';
-var map = L.mapbox.map('map', 'mapbox.streets')
-    .setView([38, -95.0], 4);
-
-// omnivore will AJAX-request this file behind the scenes and parse it:
-// note that there are considerations:
-// - The CSV file must contain latitude and longitude values, in column
-//   named roughly latitude and longitude
-// - The file must either be on the same domain as the page that requests it,
-//   or both the server it is requested from and the user's browser must
-//   support CORS.
-
-// The omnivore functions take three arguments:
-//
-// - a URL of the file to fetch
-// - options to the parser
-// - a custom layer
-//
-// And they return the custom layer, which is by default an L.geoJson layer.
-//
-// The second two arguments are each optional. In this case we're supplying
-// no arguments to the parser (null), but supplying a custom layer:
-// an instance of L.mapbox.featureLayer
-// This means that rows with simplestyle properties will be styled as they
-// would be in GeoJSON and elsewhere.
-omnivore.csv('/mapbox.js/assets/data/simplestyle.csv', null, L.mapbox.featureLayer()).addTo(map);
-</script>
 
 
 </body>
