--- a/index.html
+++ b/index.html
@@ -1,23 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
+
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="">
-<meta name="author" content="">
-<title>The Beer Mapping Project</title>
+
+<title>Leaflet Web Map</title>
+
+<!-- reference to Leaflet CSS -->
+<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
+
+<!-- reference to Leaflet JavaScript -->
+<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+
+<!-- set width and height styles for map -->
+<style>
+#map {
+    width:  100%;
+    height: 100%;
+}
+</style>
+
+</head>
+
 <body>
-<body class="full-layout">
-<div class="body-wrapper">
-<div class="yamm navbar basic default">
-	<div class="navbar-header">
-      <div class="container">
-        <div class="basic-wrapper"> <a class="btn responsive-menu pull-right" data-toggle="collapse" data-target=".navbar-collapse">
-	        <i class='icon-menu-1'></i></a> 
-	        <h1 style="font-color:white;">
-	        <a class="navbar-brand" href="https://beermapping.com"><img src="http://1.bp.blogspot.com/-KCeY792JHps/T5rddCHNbuI/AAAAAAAABE8/82To6rreyFQ/s1600/football.png"/> 
-	        The Soccer Club Mapping Project 
-	        </a></h1> 
-        </div>
+
+    <!-- place holder for map -->
+    <div id="map"></div>
+
+<script>
+
+    //  create map object, tell it to live in 'map' div and give initial latitude, longitude, zoom values 
+    var map = L.map('map', {scrollWheelZoom:false}).setView([43.64701, -79.39425], 15);
+
+    //  add base map tiles from OpenStreetMap and attribution info to 'map' div
+    L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
+    attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
+    }).addTo(map);
+
+    // create custom icon
+    var firefoxIcon = L.icon({
+        iconUrl: 'http://joshuafrazier.info/images/firefox.svg',
+        iconSize: [38, 95], // size of the icon
+        });
+
+    // create marker object, pass custom icon as option, add to map         
+    var marker = L.marker([43.64701, -79.39425], {icon: firefoxIcon}).addTo(map);
+
+</script>
+
 </body>
+
 </html>
