--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
 
 <!-- set width and height styles for map -->
 <style>
+html, body{
+    height: 100%;
+}
+    
 #map {
-    width:  100%;
     height: 100%;
 }
 </style>
@@ -25,7 +28,7 @@
 <body>
 
     <!-- place holder for map -->
-    <div id="map"></div>
+    <div id="map" style="width:100%"></div>
 
 <script>
 
