--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
 
-<div id="mapid" style="width: 600px; height: 400px;"></div>
+<div id="mapid" style="width: 100%; height: 100%;"></div>
 <script>
 
 	var mymap = L.map('mapid').setView([51.505, -0.09], 13);
