--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
 <head>
     <title>Full Screen Leaflet Map</title>
     <meta charset="utf-8" />
-    <link 
-        rel="stylesheet" 
-        href="http://cdn.leafletjs.com/leaflet-0.7/leaflet.css"
-    />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" />"
     <style>
         body {
             padding: 0;
@@ -21,9 +18,7 @@
 <body>
     <div id="map"></div>
 
-    <script
-        src="http://cdn.leafletjs.com/leaflet-0.7/leaflet.js">
-    </script>
+    <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
 
     <script>
         var map = L.map('map').setView([-41.2858, 174.78682], 14);
