--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Full Screen Leaflet Map</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" />"
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" />
     <style>
         body {
             padding: 0;
